--- a/custom.css
+++ b/custom.css
@@ -16,3 +16,17 @@ input[type="button"] {
     height: 32px;
     padding: 0 15px;
     line-height: 32px; }
+
+/*
+.basic {
+    font-weight: bold;
+    color: #fff; }
+.fine {
+    color: #3c3; }
+.superior {
+    color: #06f; }
+.epic {
+    color: #c0f; }
+.legendary {
+    color: #e6bc16; }
+*/
